Mon Aug 11 02:31:10 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * TAO/orbsvcs/tests/Redundant_Naming/Makefile:
          Added the following missing libraries to LDLIBS: -lTAO_Valuetype
          -lTAO_ObjRefTemplate -lTAO_IORInterceptor. They were getting
          added automagically in shared builds but must be supplied
          explicitly for static builds.

Mon Aug 11 00:35:47 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * examples/Load_Balancing_persistent/Load_Balancer_i.h:
          Added #include Memory_Pool.h and Malloc_T.h needed due to recent
          subsetting.

        * examples/Persistent_Grid/Grid_i.h:
          Added #include OS.h, Memory_Poll.h, and Null_Mutex.h needed due
          to recent subsetting.

Sun Aug 10 20:26:27 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * orbsvcs/tests/InterfaceRepo/IDL3_Test/Makefile:
          Fixed a typo: s/IFR_Test/IDL3_Test/.

Sun Aug 10 08:27:38 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/RTKokyuEvent_Static.dsp: Added new .dsp file for
	  static builds.
	
	* orbsvcs/orbsvcs/RTKokyuEvent.mpc:
	  Updated these files so that they are similar to RTSchedEvent files.
	
	* TAOACE.dsw:
	* TAOACE_Static.dsw:
	* orbsvcs/orbsvcs/orbsvcs.dsw:
	* orbsvcs/orbsvcs/orbsvcs_static.dsw:
	  Added RTKokyuEvent dsp files.

Sat Aug  9 14:05:13 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/Event/EC_Kokyu_Dispatching.cpp:
	* orbsvcs/orbsvcs/Event/EC_Kokyu_Filter.cpp: Fixed unused
	  parameters compiler warnings in Debian_Full_Reactors build.

Sat Aug  9 13:38:27 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/Event_Service/Event_Service.cpp:
	* orbsvcs/Event_Service/Event_Service.h:
	  Added <none> as a possible value for the -s (scheduler type)
	  option. If -s option is not specified and the new EC is selected
	  using the -t (EC type) option, then no scheduler is used by the